--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-slot": "^1.2.3",
     "axios": "^1.9.0",
@@ -45,6 +46,7 @@
     "eslint-config-next": "15.3.2",
     "eslint-plugin-storybook": "^0.12.0",
     "playwright": "^1.52.0",
+    "sass": "^1.89.1",
     "storybook": "^8.6.14",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
