--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "prisma generate",
     "db:pull": "npx prisma db pull",
     "db:seed": "node prisma/seed.js",
-    "storybook": "storybook dev -p 6006 --ci",
+    "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
@@ -37,31 +37,23 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.6",
+    "@chromatic-com/storybook": "^4.0.0",
     "@eslint/eslintrc": "^3",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-onboarding": "^8.6.14",
-    "@storybook/blocks": "^8.6.14",
-    "@storybook/experimental-addon-test": "^8.6.14",
-    "@storybook/experimental-nextjs-vite": "^8.6.14",
-    "@storybook/react": "^8.6.14",
-    "@storybook/test": "^8.6.14",
+    "@storybook/addon-docs": "^9.0.5",
+    "@storybook/addon-onboarding": "^9.0.5",
+    "@storybook/nextjs": "^9.0.5",
     "@tailwindcss/postcss": "^4",
     "@vitest/browser": "^3.1.4",
     "@vitest/coverage-v8": "^3.1.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "eslint-plugin-storybook": "^0.12.0",
+    "eslint-plugin-storybook": "^9.0.5",
     "playwright": "^1.52.0",
     "sass": "^1.89.1",
-    "storybook": "^8.6.14",
+    "storybook": "^9.0.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.4"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
   }
 }
