--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.511.0",
+    "moment": "^2.30.1",
     "motion": "^12.16.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
