--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,8 +8,11 @@ COPY package*.json ./
 # npm install전 prisma 스키마 파일을 먼저 복사
 COPY prisma ./prisma/
 
-# Install dependencies
-RUN npm install
+# Install dependencies (Linux용 네이티브 모듈 포함)
+RUN npm ci --prefer-offline
+
+# LightningCSS 네이티브 바이너리 강제 재설치
+RUN npm rebuild lightningcss --update-binary
 
 # Copy the project files to the container
 COPY . .
