--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-NEXT_PUBLIC_API_URL="http://pocamarket_api:8080"
+NODE_ENV=production
+NEXT_PUBLIC_DEBUG=false
 
+NEXT_PUBLIC_API_URL="http://pocamarket-api:8080"
+NEXT_PUBLIC_SERVER_URL="http://pocamarket-web:3000"
 NEXT_PUBLIC_LOCAL_API_URL="http://localhost:8080"
 
 DATABASE_URL="mysql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public"
