feat: 로컬도커개발환경 설정

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ NEXT_PUBLIC_LOCAL_API_URL="http://localhost:8080"
 DATABASE_URL="mysql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public"
 
 CHOKIDAR_USEPOLLING=true
+
+
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=""
+NEXT_PUBLIC_GOOGLE_CLIENT_SECRET=""
