--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,22 +1,21 @@
-# Use the official Node.js runtime as a base image
-FROM node:22-bullseye
+FROM node:22-alpine
 WORKDIR /src
 
-# Copy package.json and package-lock.json to the container
+# 패키지 파일들 복사
 COPY package*.json ./
-
-# npm install전 prisma 스키마 파일을 먼저 복사
 COPY prisma ./prisma/
 
-# Install dependencies (Linux용 네이티브 모듈 포함)
-RUN npm ci --prefer-offline
+# 의존성 설치
+RUN npm install
 
-# LightningCSS 네이티브 바이너리 강제 재설치
-RUN npm rebuild lightningcss --update-binary
+# 프로젝트 파일들 복사
+# COPY . .
 
-# Copy the project files to the container
-COPY . .
+# 핫리로드를 위한 환경 변수 설정
+ENV WATCHPACK_POLLING=true
+ENV CHOKIDAR_USEPOLLING=true
 
 EXPOSE 3000
-# Run the Next.js server
+
+# 개발 서버 실행 (핫리로드 활성화)
 CMD ["npm", "run", "dev"]
