--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "framer-motion": "^12.16.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
+    "mermaid": "^11.8.1",
     "moment": "^2.30.1",
     "motion": "^12.16.0",
     "next": "15.3.2",
